# uutid-cpp

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: main.yml
include/: uutid.hpp
tests/: CMakeLists.txt  test_uutid.cpp
